aks-reduced/patches/elasticsearch.data.yaml
# @author Alejandro Galue <agalue@opennms.org>

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: esdata
  namespace: opennms
spec:
  template:
    spec:
      containers:
      - name: esdata
        resources:
          limits:
            memory: 2Gi
          requests:
            memory: 1Gi
          $patch: replace
