aks-reduced/patches/grafana.yaml
# @author Alejandro Galue <agalue@opennms.org>

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: opennms
spec:
  replicas: 1
