aks-reduced/patches/kafka.yaml
# @author Alejandro Galue <agalue@opennms.org>

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: opennms
spec:
  template:
    spec:
      containers:
      - name: kafka
        resources:
          limits:
            memory: 1Gi
          requests:
            memory: 512Mi
          $patch: replace
