aks-reduced/patches/opennms.core.yaml
# @author Alejandro Galue <agalue@opennms.org>

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: onms
  namespace: opennms
spec:
  template:
    spec:
      containers:
      - name: onms
        resources:
          limits:
            memory: 3Gi
          requests:
            memory: 2Gi
          $patch: replace
