aks-reduced/patches/postgresql.yaml
# @author Alejandro Galue <agalue@opennms.org>

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: opennms
spec:
  template:
    spec:
      containers:
      - name: postgres
        args:
          - postgres
        volumeMounts:
        - mountPath: /etc/postgresql.conf
          $patch: delete
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 256Mi
          $patch: replace
      volumes:
      - name: postgresql-config
        $patch: delete
