aks-reduced/patches/opennms.ui.yaml
# @author Alejandro Galue <agalue@opennms.org>

---
$patch: delete
apiVersion: v1
kind: Service
metadata:
  name: opennms-ui
  namespace: opennms

---
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onms-ui
  namespace: opennms
