aks-reduced/patches/external-access.yaml
# @author Alejandro Galue <agalue@opennms.org>

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onms-ingress
  namespace: opennms
spec:
  tls:
    - secretName: opennms-ingress-cert
      hosts:
        - onms.azure.agalue.net
        - grafana.azure.agalue.net
        - hasura.azure.agalue.net
        - kafka-manager.azure.agalue.net
        - kibana.azure.agalue.net
        - elastichq.azure.agalue.net
        - tracing.azure.agalue.net
  rules:
    - host: onms.azure.agalue.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opennms-core
                port:
                  number: 8980
    - host: grafana.azure.agalue.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
    - host: hasura.azure.agalue.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hasura
                port:
                  number: 8080
    - host: kafka-manager.azure.agalue.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-manager
                port:
                  number: 9000
    - host: kibana.azure.agalue.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kibana
                port:
                  number: 5601
    - host: elastichq.azure.agalue.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elastichq
                port:
                  number: 5000
    - host: tracing.azure.agalue.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onms-tracing-query
                port:
                  number: 16686

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grpc-ingress
  namespace: opennms
spec:
  tls:
    - secretName: grpc-ingress-cert
      hosts:
        - grpc.azure.agalue.net
  rules:
    - host: grpc.azure.agalue.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grpc-server
                port:
                  number: 8990
